--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/Index.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/Index.cshtml
@@ -21,7 +21,7 @@
         <tr style="height:20px;"></tr>
         <tr>
             <td>
-                Password:
+                PANNumber:
             </td>
             <td>
                 @Html.TextBoxFor(m => m.PANNumber, new { style = "width: 300px;" })
