ITReturnDetails view changes

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
@@ -21,14 +21,215 @@
             <td>@Html.LabelFor(m=>m.ITReturnDetailsObject.AssessmentYear)</td>
         </tr>
      </table>
+     <br />
      <table>
-        <tr>
-
-        </tr>
          <tr>
-            <td><button type="submit">Search</button></td>
-        </tr>
-    </table>
+             <th colspan="2">SNo.</th>
+             <th>Questions</th>
+             <th>Response</th>
+         </tr>
+         <tr>
+             <td>2</td>
+             <td></td>
+             <td>The information is being updated for:-</td>
+             <td>@Html.DropDownListFor(m => m.ITReturnDetailsObject.ITSectionID, new SelectList(Model.ITSectionList, "ID", "Description"))</td>
+         </tr>
+         <tr>
+             <td>3</td>
+             <td></td>
+             <td>Date of filing the return:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.ITReturnFillingDate, String.Format("{0:d}", Model.ITReturnDetailsObject.ITReturnFillingDate.ToString()), new { @class = "datefield", type = "date" })
+             </td>
+         </tr>
+         <tr>
+             <td></td>
+             <td>a</td>
+             <td>Due date of filing the return:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.ITReturnDueDate, new { @class = "datefield", type = "date" })
+             </td>
+         </tr>
+         <tr>
+             <td>4</td>
+             <td></td>
+             <td>Income from House property:-</td>
+             <td>@Html.TextBoxFor(m => m.ITReturnDetailsObject.HousePropIncome, Model.ITReturnDetailsObject.HousePropIncome)</td>
+         </tr>
+         <tr>
+             <td>5</td>
+             <td></td>
+             <td>Income from capital gains(Not STT Paid):-</td>
+             <td>@Html.TextBoxFor(m => m.ITReturnDetailsObject.IncomefromCapGainsNonSTT, Model.ITReturnDetailsObject.IncomefromCapGainsNonSTT)</td>
+         </tr>
+         <tr>
+             <td></td>
+             <td></td>
+             <td>Income from capital gains(STT Paid):-</td>
+             <td>@Html.TextBoxFor(m => m.ITReturnDetailsObject.IncomefromCapGainsSTT, Model.ITReturnDetailsObject.IncomefromCapGainsSTT)</td>
+         </tr>
+         <tr>
+             <td>6</td>
+             <td></td>
+             <td>Income from Business & Profession:-</td>
+             <td>
+                 @Html.RadioButtonFor(m => m.ITReturnDetailsObject.IncomefromBusinessProf, !Model.ITReturnDetailsObject.IncomefromBusinessProf) Yes
+                 @Html.RadioButtonFor(m => m.ITReturnDetailsObject.IncomefromBusinessProf, Model.ITReturnDetailsObject.IncomefromBusinessProf) No
+             </td>
+         </tr>
+         <tr>
+             <td></td>
+             <td>a</td>
+             <td>Unabsorbed Depreciation:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.UnabsorbedDepreciation, Model.ITReturnDetailsObject.UnabsorbedDepreciation)
+             </td>
+         </tr>
+         <tr>
+             <td></td>
+             <td>b</td>
+             <td>Brought forward losses:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.Broughtforwardlosses, Model.ITReturnDetailsObject.Broughtforwardlosses)
+             </td>
+         </tr>
+         <tr>
+             <td>7</td>
+             <td></td>
+             <td>Income from other sources:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.IncomeFromOtherSources, Model.ITReturnDetailsObject.IncomeFromOtherSources)
+             </td>
+         </tr>
+         <tr>
+             <td>9</td>
+             <td></td>
+             <td>Deductions under Chapter VI A:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.DeductChapterVIA, Model.ITReturnDetailsObject.DeductChapterVIA)
+             </td>
+         </tr>
+         <tr>
+             <td>11</td>
+             <td></td>
+             <td>Book profit of the company u/s 115JB:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.ProfitUS115JB, Model.ITReturnDetailsObject.ProfitUS115JB)
+             </td>
+         </tr>
+         <tr>
+             <td>22</td>
+             <td></td>
+             <td>Advance Tax(1st Installment) been paid by the company:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax1installment, Model.ITReturnDetailsObject.AdvanceTax1installment)
+             </td>
+         </tr>
+         <tr>
+             <td>23</td>
+             <td></td>
+             <td>Advance Tax(2nd Installment) been paid by the company:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax2installment, Model.ITReturnDetailsObject.AdvanceTax2installment)
+             </td>
+         </tr>
+         <tr>
+             <td>24</td>
+             <td></td>
+             <td>Advance Tax(3rd Installment) been paid by the company:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax3installment, Model.ITReturnDetailsObject.AdvanceTax3installment)
+             </td>
+         </tr>
+         <tr>
+             <td>25</td>
+             <td></td>
+             <td>Advance Tax(4th Installment) been paid by the company:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax4installment, Model.ITReturnDetailsObject.AdvanceTax4installment)
+             </td>
+         </tr>
+         <tr>
+             <td>27</td>
+             <td></td>
+             <td>Tax Deducted at source:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.TDS, Model.ITReturnDetailsObject.TDS)
+             </td>
+         </tr>
+         <tr>
+             <td>28</td>
+             <td></td>
+             <td>TCS paid by the company:-</td>
+             <td>
+                @Html.TextBoxFor(m => m.ITReturnDetailsObject.TCSPaidbyCompany, Model.ITReturnDetailsObject.TCSPaidbyCompany)
+             </td>
+         </tr>
+         <tr>
+             <td>36</td>
+             <td></td>
+             <td>Self-Assessment Tax paid by the company:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.SelfassessmentTax, Model.ITReturnDetailsObject.SelfassessmentTax)
+             </td>
+         </tr>
+         <tr>
+             <td colspan="2"></td>
+             <td>Has the company utilised MAT credit available during the year?</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.MATCredit, Model.ITReturnDetailsObject.MATCredit)
+             </td>
+         </tr>
+         <tr>
+             <td colspan="2"></td>
+             <td>Interest U/S 234A of the Income Tax Act 1961:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.InterestUS234A, Model.ITReturnDetailsObject.InterestUS234A)
+             </td>
+         </tr>
+         <tr>
+             <td colspan="2"></td>
+             <td>Interest U/S 234B of the Income Tax Act 1961:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.InterestUS234B, Model.ITReturnDetailsObject.InterestUS234B)
+             </td>
+         </tr>
+         <tr>
+             <td colspan="2"></td>
+             <td>Interest U/S 234C of the Income Tax Act 1961:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.InterestUS234C, Model.ITReturnDetailsObject.InterestUS234C)
+             </td>
+         </tr>
+         <tr>
+             <td>38</td>
+             <td></td>
+             <td>Interest receivable applicable u/s 244A of the Income Tax Act 1961:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.InterestUS244A, Model.ITReturnDetailsObject.InterestUS244A)
+             </td>
+         </tr>
+         <tr>
+             <td>39</td>
+             <td></td>
+             <td>Refund already been received:-</td>
+             <td>
+                 @Html.TextBoxFor(m => m.ITReturnDetailsObject.RefundReceived, Model.ITReturnDetailsObject.RefundReceived)
+             </td>
+         </tr>
+         <tr>
+             <td>41</td>
+             <td></td>
+             <td>Has a revised return been filed by the company?</td>
+             <td>
+                 @Html.RadioButtonFor(m => m.ITReturnDetailsObject.RevisedReturnFile, !Model.ITReturnDetailsObject.RevisedReturnFile) Yes
+                 @Html.RadioButtonFor(m => m.ITReturnDetailsObject.RevisedReturnFile, Model.ITReturnDetailsObject.RevisedReturnFile) No
+             </td>
+         </tr>
+         <tr>
+             <td colspan="4"><button type="submit">Save</button></td>
+         </tr>
+     </table>
     <br />
 
 }
