--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
@@ -8,13 +8,14 @@
 
     <table>
         <tr>
-            <td>Company Name:-</td>
+            <td colspan="2">Company Name</td>
             <td>Financial Year</td>
             <td>Assessment Year</td>
         </tr>
         <tr>
-            <td>
-                @Html.LabelFor(m => m.ITReturnDetailsObject.CompanyName)
+            <td colspan="2">
+                @*@Html.LabelFor(m => m.ITReturnDetailsObject.CompanyName)*@
+                @Model.ITReturnDetailsObject.CompanyName
                 @Html.HiddenFor(m => m.ITReturnDetailsObject.CompanyID)
             </td>
             <td>@Html.DropDownListFor(m=>m.ITReturnDetailsObject.FYAYID, new SelectList(Model.FYAYList, "ID", "FinancialYear"))</td>
