--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnResponse.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnResponse.cshtml
@@ -1,4 +1,4 @@
-﻿@model  LSWebApp.Models.ITReturnDetailsModel
+﻿@model  LS.Models.ITReturnDetailsResponse
 
 <h2>Original Return/Revised Return</h2>
 
@@ -11,7 +11,6 @@
         </tr>
         <tr>
             <td colspan="2">
-                @*@Html.LabelFor(m => m.ITReturnDetailsObject.CompanyName)*@
                 @Model.ITReturnDetailsObject.CompanyName
                 @Html.HiddenFor(m => m.ITReturnDetailsObject.CompanyID)
             </td>
