--- a/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
@@ -6,19 +6,8 @@
     <title>@ViewBag.Title - Litigation Tracking Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @* <link href="@Url.Content("~/Content/themes/base/jquery.ui.core.css")"
-              rel="stylesheet" type="text/css" />
-        <link href="@Url.Content("~/Content/themes/base/jquery.ui.datepicker.css")"
-              rel="stylesheet" type="text/css" />
-        <link href="@Url.Content("~/Content/themes/base/jquery.ui.theme.css")"
-              rel="stylesheet" type="text/css" />
 
-        <script src="@Url.Content("~/Scripts/jquery.ui.core.min.js")"
-                type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/jquery.ui.datepicker.min.js")"
-                type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/DatePickerReady.js")"
-                type="text/javascript"></script>*@
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
