--- a/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     <script src="@Url.Content("~/Scripts/customDD.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/manageSubHead.js")" type="text/javascript"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
