--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetCompanyList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetCompanyList.cshtml
@@ -10,13 +10,13 @@
         margin-right: 5px;
     }
 </style>
-<h2>List of Companies registered</h2>
+<h3>List of Companies registered</h3>
 
 @{
     if (Model.Companies != null)
     {
         @Html.HiddenFor(m => m.UserId, Model.UserId)
-        <table style="">
+        <table class="table table-hover">
             <thead>
             <th>Company Name</th>
             <th>PAN Number</th>
@@ -25,7 +25,7 @@
 
             @foreach (var company in Model.Companies)
             {
-                <tr>
+                <tr class="table-active">
                     <td>
                         @Html.HiddenFor(m => company.Id, company.Id)
                         @company.CompanyName
@@ -34,9 +34,6 @@
                     <td>
                         @Html.ActionLink("Create IT Return Details", "GetITReturnDetails", "TaxReturn", new { userId = Model.UserId, companyId = company.Id,companyname = company.CompanyName }, null)
                     </td>
-                    @*<td>
-                        @Html.ActionLink("Update Profile", "UpdateProfile", "SignUp", new { userId = Model.UserId, profileId = profile.Id }, null)
-                    </td>*@
                 </tr>
             }
         </table>
