Added code/sql for compliance screen

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ItSubHeadDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ItSubHeadDetails.cshtml
@@ -16,7 +16,7 @@
              style="width:20px;height:20px;display:none;" />
     </td>
 </tr>
-<tr class="trDisallownace@(Model.ITHeadId.ToString())">
+<tr class="trDisallowance@(Model.ITHeadId.ToString())">
     <td></td>
     <td>a</td>
     <td>
